--- a/acceptance/sig_short_exp_time/BUILD.bazel
+++ b/acceptance/sig_short_exp_time/BUILD.bazel
@@ -1,5 +1,3 @@
-load("@io_bazel_rules_docker//container:container.bzl", "container_image")
-
 sh_test(
     name = "sig_short_exp_time_test",
     size = "small",
@@ -19,59 +17,59 @@ sh_test(
     ],
 )
 
-container_image(
-    name = "udpproxy",
-    base = "//tools/udpproxy",
-)
+# container_image(
+#     name = "udpproxy",
+#     base = "//tools/udpproxy",
+# )
 
-container_image(
-    name = "dispatcher1",
-    base = "//docker:dispatcher",
-    cmd = [
-        "--config",
-        "/disp.toml",
-    ],
-    entrypoint = ["/app/dispatcher"],
-    files = ["testdata/1-ff00_0_110/dispatcher/disp.toml"],
-)
+# container_image(
+#     name = "dispatcher1",
+#     base = "//docker:dispatcher",
+#     cmd = [
+#         "--config",
+#         "/disp.toml",
+#     ],
+#     entrypoint = ["/app/dispatcher"],
+#     files = ["testdata/1-ff00_0_110/dispatcher/disp.toml"],
+# )
 
-container_image(
-    name = "dispatcher2",
-    base = "//docker:dispatcher",
-    cmd = [
-        "--config",
-        "/disp.toml",
-    ],
-    entrypoint = ["/app/dispatcher"],
-    files = ["testdata/1-ff00_0_111/dispatcher/disp.toml"],
-)
+# container_image(
+#     name = "dispatcher2",
+#     base = "//docker:dispatcher",
+#     cmd = [
+#         "--config",
+#         "/disp.toml",
+#     ],
+#     entrypoint = ["/app/dispatcher"],
+#     files = ["testdata/1-ff00_0_111/dispatcher/disp.toml"],
+# )
 
-container_image(
-    name = "sig1",
-    base = "//docker:posix_gateway",
-    cmd = [
-        "--config",
-        "/sig.toml",
-    ],
-    entrypoint = ["/app/gateway"],
-    files = [
-        "testdata/1-ff00_0_110/sig/cfg.json",
-        "testdata/1-ff00_0_110/sig/fake_sciond.json",
-        "testdata/1-ff00_0_110/sig/sig.toml",
-    ],
-)
+# container_image(
+#     name = "sig1",
+#     base = "//docker:posix_gateway",
+#     cmd = [
+#         "--config",
+#         "/sig.toml",
+#     ],
+#     entrypoint = ["/app/gateway"],
+#     files = [
+#         "testdata/1-ff00_0_110/sig/cfg.json",
+#         "testdata/1-ff00_0_110/sig/fake_sciond.json",
+#         "testdata/1-ff00_0_110/sig/sig.toml",
+#     ],
+# )
 
-container_image(
-    name = "sig2",
-    base = "//docker:posix_gateway",
-    cmd = [
-        "--config",
-        "/sig.toml",
-    ],
-    entrypoint = ["/app/gateway"],
-    files = [
-        "testdata/1-ff00_0_111/sig/cfg.json",
-        "testdata/1-ff00_0_111/sig/fake_sciond.json",
-        "testdata/1-ff00_0_111/sig/sig.toml",
-    ],
-)
+# container_image(
+#     name = "sig2",
+#     base = "//docker:posix_gateway",
+#     cmd = [
+#         "--config",
+#         "/sig.toml",
+#     ],
+#     entrypoint = ["/app/gateway"],
+#     files = [
+#         "testdata/1-ff00_0_111/sig/cfg.json",
+#         "testdata/1-ff00_0_111/sig/fake_sciond.json",
+#         "testdata/1-ff00_0_111/sig/sig.toml",
+#     ],
+# )
