--- a/acceptance/topo_cs_reload/BUILD.bazel
+++ b/acceptance/topo_cs_reload/BUILD.bazel
@@ -1,5 +1,5 @@
 load("//tools/lint:go.bzl", "go_test")
-load("@io_bazel_rules_docker//container:container.bzl", "container_image")
+load("@rules_oci//oci:defs.bzl", "oci_image")
 
 go_test(
     name = "go_default_test",
@@ -36,36 +36,36 @@ go_test(
     ],
 )
 
-container_image(
-    name = "dispatcher",
-    base = "//docker:dispatcher",
-    cmd = [
-        "--config",
-        "/disp.toml",
-    ],
-    entrypoint = ["/app/dispatcher"],
-    files = ["testdata/disp.toml"],
-)
+# oci_image(
+#     name = "dispatcher",
+#     base = "//docker:dispatcher",
+#     cmd = [
+#         "--config",
+#         "/disp.toml",
+#     ],
+#     entrypoint = ["/app/dispatcher"],
+#     files = ["testdata/disp.toml"],
+# )
 
-container_image(
-    name = "control",
-    base = "//docker:control",
-    cmd = [
-        "--config",
-        "/cs.toml",
-    ],
-    entrypoint = ["/app/control"],
-    files = [
-        "testdata/cs.toml",
-        "testdata/tls.key",
-        "testdata/tls.pem",
-        "testdata/topology_reload.json",
-        ":invalid_changed_ip",
-        ":invalid_changed_port",
-        "//acceptance/topo_common:invalid_reloads",
-        "//acceptance/topo_common:topology",
-    ],
-)
+# oci_image(
+#     name = "control",
+#     base = "//docker:control",
+#     cmd = [
+#         "--config",
+#         "/cs.toml",
+#     ],
+#     entrypoint = ["/app/control"],
+#     files = [
+#         "testdata/cs.toml",
+#         "testdata/tls.key",
+#         "testdata/tls.pem",
+#         "testdata/topology_reload.json",
+#         ":invalid_changed_ip",
+#         ":invalid_changed_port",
+#         "//acceptance/topo_common:invalid_reloads",
+#         "//acceptance/topo_common:topology",
+#     ],
+# )
 
 genrule(
     name = "invalid_changed_ip",
