--- a/acceptance/topo_daemon_reload/BUILD.bazel
+++ b/acceptance/topo_daemon_reload/BUILD.bazel
@@ -1,5 +1,5 @@
 load("//tools/lint:go.bzl", "go_test")
-load("@io_bazel_rules_docker//container:container.bzl", "container_image")
+load("@rules_oci//oci:defs.bzl", "oci_image")
 
 go_test(
     name = "go_default_test",
@@ -23,29 +23,29 @@ go_test(
     ],
 )
 
-container_image(
-    name = "dispatcher",
-    base = "//docker:dispatcher",
-    cmd = [
-        "--config",
-        "/disp.toml",
-    ],
-    entrypoint = ["/app/dispatcher"],
-    files = ["testdata/disp.toml"],
-)
+# oci_image(
+#     name = "dispatcher",
+#     base = "//docker:dispatcher",
+#     cmd = [
+#         "--config",
+#         "/disp.toml",
+#     ],
+#     entrypoint = ["/app/dispatcher"],
+#     files = ["testdata/disp.toml"],
+# )
 
-container_image(
-    name = "daemon",
-    base = "//docker:daemon",
-    cmd = [
-        "--config",
-        "/sd.toml",
-    ],
-    entrypoint = ["/app/daemon"],
-    files = [
-        "testdata/sd.toml",
-        "testdata/topology_reload.json",
-        "//acceptance/topo_common:invalid_reloads",
-        "//acceptance/topo_common:topology",
-    ],
-)
+# oci_image(
+#     name = "daemon",
+#     base = "//docker:daemon",
+#     cmd = [
+#         "--config",
+#         "/sd.toml",
+#     ],
+#     entrypoint = ["/app/daemon"],
+#     files = [
+#         "testdata/sd.toml",
+#         "testdata/topology_reload.json",
+#         "//acceptance/topo_common:invalid_reloads",
+#         "//acceptance/topo_common:topology",
+#     ],
+# )
