--- a/acceptance/router_benchmark/BUILD.bazel
+++ b/acceptance/router_benchmark/BUILD.bazel
@@ -8,12 +8,12 @@ exports_files([
 args = [
     "--executable",
     "brload:$(location //acceptance/router_benchmark/brload:brload)",
-    "--container-loader=router:latest#$(location //docker:router)",
+    "--container-loader=$(location //docker:router.tar)",
 ]
 
 data = [
     ":conf",
-    "//docker:router",
+    "//docker:router.tar",
     "//acceptance/router_benchmark/brload:brload",
 ]
 
@@ -22,7 +22,7 @@ raw_test(
     src = "test.py",
     args = args,
     data = data,
-    homedir = "$(rootpath //docker:router)",
+    homedir = "$(rootpath //docker:router.tar)",
     # This test uses sudo and accesses /var/run/netns.
     local = True,
 )
