--- a/acceptance/topo_daemon_reload/BUILD.bazel
+++ b/acceptance/topo_daemon_reload/BUILD.bazel
@@ -1,5 +1,6 @@
 load("//tools/lint:go.bzl", "go_test")
-load("@rules_oci//oci:defs.bzl", "oci_image")
+load("@rules_pkg//:pkg.bzl", "pkg_tar")
+load("@rules_oci//oci:defs.bzl", "oci_image", "oci_tarball")
 
 go_test(
     name = "go_default_test",
@@ -23,29 +24,59 @@ go_test(
     ],
 )
 
-# oci_image(
-#     name = "dispatcher",
-#     base = "//docker:dispatcher",
-#     cmd = [
-#         "--config",
-#         "/disp.toml",
-#     ],
-#     entrypoint = ["/app/dispatcher"],
-#     files = ["testdata/disp.toml"],
-# )
+# dispatcher container
+oci_tarball(
+    name = "dispatcher.tar",
+    format = "docker",
+    image = ":dispatcher_image",
+    repo_tags = ["bazel/" + package_name() + ":dispatcher"],
+)
 
-# oci_image(
-#     name = "daemon",
-#     base = "//docker:daemon",
-#     cmd = [
-#         "--config",
-#         "/sd.toml",
-#     ],
-#     entrypoint = ["/app/daemon"],
-#     files = [
-#         "testdata/sd.toml",
-#         "testdata/topology_reload.json",
-#         "//acceptance/topo_common:invalid_reloads",
-#         "//acceptance/topo_common:topology",
-#     ],
-# )
+oci_image(
+    name = "dispatcher_image",
+    base = "//docker:dispatcher",
+    entrypoint = ["/app/dispatcher"],
+    cmd = [
+        "--config",
+        "/disp.toml",
+    ],
+    tars = [
+        ":dispatcher_data",
+    ],
+)
+
+pkg_tar(
+    name = "dispatcher_data",
+    srcs = ["testdata/disp.toml"],
+)
+
+# daemon container
+oci_tarball(
+    name = "daemon.tar",
+    format = "docker",
+    image = ":daemon_image",
+    repo_tags = ["bazel/" + package_name() + ":daemon"],
+)
+
+oci_image(
+    name = "daemon_image",
+    base = "//docker:daemon",
+    entrypoint = ["/app/daemon"],
+    cmd = [
+        "--config",
+        "/sd.toml",
+    ],
+    tars = [
+        ":daemon_data",
+    ]
+)
+
+pkg_tar(
+    name = "daemon_data",
+    srcs = [
+        "testdata/sd.toml",
+        "testdata/topology_reload.json",
+        "//acceptance/topo_common:invalid_reloads",
+        "//acceptance/topo_common:topology",
+    ],
+)
