--- a/acceptance/router_benchmark/conf/router.toml
+++ b/acceptance/router_benchmark/conf/router.toml
@@ -7,8 +7,8 @@ prometheus = "10.123.10.1:30442"
 
 [features]
 
-[router]
-bfd_disabled = true
+[router.bfd]
+disable = true
 
 [api]
 addr = "10.123.10.1:31142"
