--- a/acceptance/router_multi/conf/router_nobfd.toml
+++ b/acceptance/router_multi/conf/router_nobfd.toml
@@ -5,8 +5,8 @@
 [features]
   experimental_scmp_authentication = true
 
-[router]
-  bfd_disabled = true
+[router.bfd]
+  disable = true
 
 [log.console]
   level = "debug"
