acceptance: rename container-loader to docker-image
Not accurate anymore; used to be a shell script to load the image, now simplified to only the tar file.

--- a/acceptance/router_benchmark/BUILD.bazel
+++ b/acceptance/router_benchmark/BUILD.bazel
@@ -8,7 +8,7 @@ exports_files([
 args = [
     "--executable",
     "brload:$(location //acceptance/router_benchmark/brload:brload)",
-    "--container-loader=$(location //docker:router.tar)",
+    "--docker=image=$(location //docker:router.tar)",
 ]
 
 data = [
