fixup sig short exp time
Make it fail at the same place as it did before.

--- a/acceptance/sig_short_exp_time/BUILD.bazel
+++ b/acceptance/sig_short_exp_time/BUILD.bazel
@@ -4,12 +4,10 @@ sh_test(
     srcs = ["test"],
     data = [
         "docker-compose.yml",
-        ":dispatcher1.tar",
-        ":dispatcher2.tar",
-        ":sig1.tar",
-        ":sig2.tar",
-        ":udpproxy.tar",
-    ],
+        "//docker:dispatcher.tar",
+        "//docker:gateway.tar",
+        "//tools/udpproxy:udpproxy.tar",
+    ] + glob(["testdata/**"]),
     tags = [
         "exclusive",
         "integration",
@@ -20,28 +18,6 @@ sh_test(
 # container_image(
 #     name = "udpproxy",
 #     base = "//tools/udpproxy",
-# )
-
-# container_image(
-#     name = "dispatcher1",
-#     base = "//docker:dispatcher",
-#     cmd = [
-#         "--config",
-#         "/disp.toml",
-#     ],
-#     entrypoint = ["/app/dispatcher"],
-#     files = ["testdata/1-ff00_0_110/dispatcher/disp.toml"],
-# )
-
-# container_image(
-#     name = "dispatcher2",
-#     base = "//docker:dispatcher",
-#     cmd = [
-#         "--config",
-#         "/disp.toml",
-#     ],
-#     entrypoint = ["/app/dispatcher"],
-#     files = ["testdata/1-ff00_0_111/dispatcher/disp.toml"],
 # )
 
 # container_image(
