--- a/tools/udpproxy/BUILD.bazel
+++ b/tools/udpproxy/BUILD.bazel
@@ -1,7 +1,8 @@
 load("//tools/lint:go.bzl", "go_library")
+load("@aspect_bazel_lib//lib:copy_file.bzl", "copy_file")
 load("@io_bazel_rules_go//go:def.bzl", "go_binary")
-load("@rules_pkg//:pkg.bzl", "pkg_tar")
 load("@rules_oci//oci:defs.bzl", "oci_image", "oci_tarball")
+load("@rules_pkg//:pkg.bzl", "pkg_tar")
 
 go_library(
     name = "go_default_library",
@@ -20,12 +21,18 @@ go_binary(
     visibility = ["//visibility:public"],
 )
 
+copy_file(
+    name = "udpproxy.tarball",
+    src = "udpproxy.load",
+    out = "udpproxy.tar",
+    visibility = ["//visibility:public"],
+)
+
 oci_tarball(
-    name = "udpproxy.tar",
+    name = "udpproxy.load",
     format = "docker",
     image = ":udpproxy_image",
     repo_tags = ["scion/tools/udpproxy:latest"],
-    visibility = ["//visibility:public"],
 )
 
 oci_image(
