--- a/acceptance/router_benchmark/BUILD.bazel
+++ b/acceptance/router_benchmark/BUILD.bazel
@@ -8,12 +8,12 @@ exports_files([
 args = [
     "--executable",
     "brload:$(location //acceptance/router_benchmark/brload:brload)",
-    "--docker=image=$(location //docker:router.tar)",
+    "--docker=image=$(location //docker:router.tarball)",
 ]
 
 data = [
     ":conf",
-    "//docker:router.tar",
+    "//docker:router.tarball",
     "//acceptance/router_benchmark/brload:brload",
 ]
 
@@ -22,7 +22,7 @@ raw_test(
     src = "test.py",
     args = args,
     data = data,
-    homedir = "$(rootpath //docker:router.tar)",
+    homedir = "$(rootpath //docker:router.tarball)",
     # This test uses sudo and accesses /var/run/netns.
     local = True,
 )
