--- a/acceptance/router_benchmark/BUILD.bazel
+++ b/acceptance/router_benchmark/BUILD.bazel
@@ -8,7 +8,7 @@ exports_files([
 args = [
     "--executable",
     "brload:$(location //acceptance/router_benchmark/brload:brload)",
-    "--docker=image=$(location //docker:router.tarball)",
+    "--docker-image=$(location //docker:router.tarball)",
 ]
 
 data = [
