docker: add labels

--- a/docker/BUILD.bazel
+++ b/docker/BUILD.bazel
@@ -1,6 +1,7 @@
 load("@rules_debian_packages//debian_packages:defs.bzl", "debian_packages_lockfile")
 load(":scion_app.bzl", "scion_app_base", "scion_app_image")
 load(":tester.bzl", "scion_tester_image")
+load(":labels.bzl", "scion_labels")
 
 filegroup(
     name = "prod",
@@ -19,6 +20,8 @@ filegroup(
         ":tester.tar",
     ],
 )
+
+scion_labels()
 
 scion_app_base()
 
