build: replace rules_docker with rules_oci (#4487)
rules_docker is no longer maintained and causes issues with particular
versions of docker (see e.g.
https://github.com/scionproto/scion/issues/4480).
Replace our use of rules_docker by
https://github.com/bazel-contrib/rules_oci.

Due to differences in the rules, the build targets in `//docker` have
slightly changed behaviour:
- `//docker:<component>` is an unpacked oci layer that can be packed
into other layers.
- `//docker:<component>.tarball` is the target producing the docker
image .tar
- `//docker:<component>.load` is a runnable target to load the tarball
into docker
The distinction between `.tar` and `.load` is due to a weird behavior of
bazel related to targets that are both runnable and return files
(`$(location ..)` does not seem to work properly, see comment in
`docker/scion_apps.bzl`, in `scion_app_image()`).
- `//docker:prod` and `//docker:test` are no longer runnable, they are
just a filegroups of the tarballs. The runnable target could previously
be used to load all images. This would now require an additional
external rule (multirun) which seems unnecessary (loading images is
trivial).
- `//docker:gateway` creates a plain binary without setcap.
This simplifies the build process; it avoids having to install setcap
tools which would be more complicated now with
rules_oci/rules_debian_packages.
- `//docker:tester` is now built with rules_debian_packages (instead of
the no longer compatible rules_deb_packages).

Introduce consistent naming and tagging of all produced docker images.
All images are now tagged `scion/<component>:latest`. For router and
gateway, the names were simplified by dropping the `posix-` prefix.
For internal images used for testing we use nested names e.g.
`scion/tools/udpproxy` or `scion/acceptance/topo_reload_cs`.
Furthermore, all images are annotated with a docker label `org.scion`
(no value). This allows cleaning up with a relatively simple match

--- a/acceptance/topo_cs_reload/BUILD.bazel
+++ b/acceptance/topo_cs_reload/BUILD.bazel
@@ -1,5 +1,6 @@
 load("//tools/lint:go.bzl", "go_test")
-load("@io_bazel_rules_docker//container:container.bzl", "container_image")
+load("@rules_pkg//:pkg.bzl", "pkg_tar")
+load("@rules_oci//oci:defs.bzl", "oci_image", "oci_tarball")
 
 go_test(
     name = "go_default_test",
@@ -28,7 +29,6 @@ go_test(
         "integration",
     ],
     deps = [
-        "//pkg/private/xtest:go_default_library",
         "//private/topology:go_default_library",
         "@com_github_stretchr_testify//assert:go_default_library",
         "@com_github_stretchr_testify//require:go_default_library",
@@ -36,26 +36,56 @@ go_test(
     ],
 )
 
-container_image(
-    name = "dispatcher",
+# dispatcher container
+oci_tarball(
+    name = "dispatcher.tar",
+    format = "docker",
+    image = ":dispatcher_image",
+    repo_tags = ["scion/" + package_name() + ":dispatcher"],
+)
+
+oci_image(
+    name = "dispatcher_image",
     base = "//docker:dispatcher",
     cmd = [
         "--config",
         "/disp.toml",
     ],
     entrypoint = ["/app/dispatcher"],
-    files = ["testdata/disp.toml"],
+    tars = [
+        ":dispatcher_data",
+    ],
 )
 
-container_image(
-    name = "control",
+pkg_tar(
+    name = "dispatcher_data",
+    srcs = ["testdata/disp.toml"],
+)
+
+# control container
+oci_tarball(
+    name = "control.tar",
+    format = "docker",
+    image = ":control_image",
+    repo_tags = ["scion/" + package_name() + ":control"],
+)
+
+oci_image(
+    name = "control_image",
     base = "//docker:control",
     cmd = [
         "--config",
         "/cs.toml",
     ],
     entrypoint = ["/app/control"],
-    files = [
+    tars = [
+        ":control_data",
+    ],
+)
+
+pkg_tar(
+    name = "control_data",
+    srcs = [
         "testdata/cs.toml",
         "testdata/tls.key",
         "testdata/tls.pem",
