--- a/private/underlay/conn/BUILD.bazel
+++ b/private/underlay/conn/BUILD.bazel
@@ -1,4 +1,4 @@
-load("//tools/lint:go.bzl", "go_library", "go_test")
+load("//tools/lint:go.bzl", "go_library")
 
 go_library(
     name = "go_default_library",
@@ -22,15 +22,4 @@ go_library(
         ],
         "//conditions:default": [],
     }),
-)
-
-go_test(
-    name = "go_default_test",
-    srcs = ["conn_test.go"],
-    embed = [":go_default_library"],
-    deps = [
-        "//pkg/private/xtest:go_default_library",
-        "@com_github_stretchr_testify//assert:go_default_library",
-        "@com_github_stretchr_testify//require:go_default_library",
-    ],
 )
