testing: Some added tooling to simplify the benchmarking workflow.
All this depends on PR #4479

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -186,6 +186,7 @@ config_setting(
 pkg_tar(
     name = "scion",
     srcs = [
+        "//acceptance/benchmark.py",
         "//control/cmd/control",
         "//daemon/cmd/daemon",
         "//dispatcher/cmd/dispatcher",
