--- a/router/BUILD.bazel
+++ b/router/BUILD.bazel
@@ -31,6 +31,7 @@ go_library(
         "//private/topology:go_default_library",
         "//private/underlay/conn:go_default_library",
         "//router/bfd:go_default_library",
+        "//router/config:go_default_library",
         "//router/control:go_default_library",
         "@com_github_google_gopacket//:go_default_library",
         "@com_github_google_gopacket//layers:go_default_library",
