--- a/router/BUILD.bazel
+++ b/router/BUILD.bazel
@@ -53,6 +53,7 @@ go_test(
     deps = [
         "//pkg/addr:go_default_library",
         "//pkg/experimental/epic:go_default_library",
+        "//pkg/private/ptr:go_default_library",
         "//pkg/private/serrors:go_default_library",
         "//pkg/private/util:go_default_library",
         "//pkg/private/xtest:go_default_library",
