--- a/router/BUILD.bazel
+++ b/router/BUILD.bazel
@@ -31,6 +31,7 @@ go_library(
         "//private/topology:go_default_library",
         "//private/underlay/conn:go_default_library",
         "//router/bfd:go_default_library",
+        "//router/config:go_default_library",
         "//router/control:go_default_library",
         "@com_github_google_gopacket//:go_default_library",
         "@com_github_google_gopacket//layers:go_default_library",
@@ -52,6 +53,7 @@ go_test(
     deps = [
         "//pkg/addr:go_default_library",
         "//pkg/experimental/epic:go_default_library",
+        "//pkg/private/ptr:go_default_library",
         "//pkg/private/serrors:go_default_library",
         "//pkg/private/util:go_default_library",
         "//pkg/private/xtest:go_default_library",
