--- a/router/config/BUILD.bazel
+++ b/router/config/BUILD.bazel
@@ -11,6 +11,7 @@ go_library(
     deps = [
         "//pkg/log:go_default_library",
         "//pkg/private/serrors:go_default_library",
+        "//pkg/private/util:go_default_library",
         "//private/config:go_default_library",
         "//private/env:go_default_library",
         "//private/mgmtapi:go_default_library",
