--- a/doc/BUILD.bazel
+++ b/doc/BUILD.bazel
@@ -23,9 +23,9 @@ compile_pip_requirements(
 # Run with all packages from requirements.txt so we don't have to explicitly repeat the required modules.
 py_console_script_binary(
     name = "sphinx-build",
-    pkg = requirement("sphinx"), # note: "requirement" is just a shorthand for the :pkg label referencing the py_library
+    pkg = requirement("sphinx"),  # note: "requirement" is just a shorthand for the :pkg label referencing the py_library
     script = "sphinx-build",
-    deps = [r for r in all_requirements if r != requirement("sphinx")], # macro adds "pkg" to deps, filter it out to avoid duplicate value in attribute
+    deps = [r for r in all_requirements if r != requirement("sphinx")],  # macro adds "pkg" to deps, filter it out to avoid duplicate value in attribute
 )
 
 # sphinx-autobuild: just like above
@@ -33,7 +33,7 @@ py_console_script_binary(
     name = "sphinx-autobuild",
     pkg = requirement("sphinx-autobuild"),
     script = "sphinx-autobuild",
-    deps = [r for r in all_requirements if r != requirement("sphinx-autobuild")]
+    deps = [r for r in all_requirements if r != requirement("sphinx-autobuild")],
 )
 
 # sphinx-lint
@@ -44,7 +44,15 @@ alias(
 
 sphinx_lint_test(
     name = "sphinx_lint_test",
-    args = ["--enable", "all", "--disable", "line-too-long"],
-    srcs = glob(['**/*.rst', '**/*.md']),
+    srcs = glob([
+        "**/*.rst",
+        "**/*.md",
+    ]),
+    args = [
+        "--enable",
+        "all",
+        "--disable",
+        "line-too-long",
+    ],
     tags = ["lint"],
 )
