--- a/private/underlay/conn/BUILD.bazel
+++ b/private/underlay/conn/BUILD.bazel
@@ -9,21 +9,11 @@ go_library(
     ],
     importpath = "github.com/scionproto/scion/private/underlay/conn",
     visibility = ["//visibility:public"],
-    deps = select({
-        "@io_bazel_rules_go//go/platform:android": [
-            "//pkg/log:go_default_library",
-            "//pkg/private/serrors:go_default_library",
-            "//private/underlay/sockctrl:go_default_library",
-            "@org_golang_x_net//ipv4:go_default_library",
-            "@org_golang_x_net//ipv6:go_default_library",
-        ],
-        "@io_bazel_rules_go//go/platform:linux": [
-            "//pkg/log:go_default_library",
-            "//pkg/private/serrors:go_default_library",
-            "//private/underlay/sockctrl:go_default_library",
-            "@org_golang_x_net//ipv4:go_default_library",
-            "@org_golang_x_net//ipv6:go_default_library",
-        ],
-        "//conditions:default": [],
-    }),
+    deps = [
+        "//pkg/log:go_default_library",
+        "//pkg/private/serrors:go_default_library",
+        "//private/underlay/sockctrl:go_default_library",
+        "@org_golang_x_net//ipv4:go_default_library",
+        "@org_golang_x_net//ipv6:go_default_library",
+    ],
 )
