doc: update all documentation build dependencies
Update all the dependencies in the documentation build to latest
versions.
Notable changes are
- sphinx from 6.1.3 to 7.3.7
- sphinx-rtd-theme from 1.2.0 to 2.0.0
- sphinx-autobuild from 2021.3.14 to 2024.4.16
  This pulls in a fairly different set of indirect dependencies now.

Fix small typo in toml snippet in manuals/control.rst, as sphinx now
warns about this.

Fix small bug in doc/Makefile; build was failing after "make clean",
because the realpath function fails if path (_build directory) does not
exist.

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -11,8 +11,8 @@
 SPHINX_BUILD	 ?= bazel run //doc:sphinx-build --
 SPHINX_AUTOBUILD ?= bazel run //doc:sphinx-autobuild --
 SPHINXOPTS    ?= -W --keep-going # treat warnings as errors, but process all files when an error occurs
-SOURCEDIR     = $(realpath .)
-BUILDDIR      = $(realpath _build)
+SOURCEDIR     = $(abspath .)
+BUILDDIR      = $(abspath ./_build)
 
 # Build docs with Sphinx using the "make mode" option.
 # Explicitly list the main build targets so they auto-complete in shells.
