--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -205,6 +205,7 @@ pkg_tar(
     name = "scion-ci",
     srcs = [
         "//acceptance/cmd/sig_ping_acceptance",
+        "//acceptance/router_benchmark:benchmark",
         "//acceptance/router_benchmark/brload",
         "//pkg/private/xtest/graphupdater",
         "//tools/braccept",
