--- a/control/mgmtapi/BUILD.bazel
+++ b/control/mgmtapi/BUILD.bazel
@@ -42,6 +42,7 @@ go_library(
         "//private/mgmtapi/segments/api:go_default_library",
         "//private/storage:go_default_library",
         "//private/storage/beacon:go_default_library",
+        "//private/trust:go_default_library",
         "@com_github_getkin_kin_openapi//openapi3:go_default_library",  # keep
         "@com_github_go_chi_chi_v5//:go_default_library",  # keep
         "@com_github_oapi_codegen_runtime//:go_default_library",  # keep
