--- a/private/trust/BUILD.bazel
+++ b/private/trust/BUILD.bazel
@@ -78,6 +78,7 @@ go_test(
         "//private/storage/trust/sqlite:go_default_library",
         "//private/trust/internal/metrics:go_default_library",
         "//private/trust/mock_trust:go_default_library",
+        "//scion-pki/certs:go_default_library",
         "//scion-pki/testcrypto:go_default_library",
         "//scion-pki/trcs:go_default_library",
         "@com_github_golang_mock//gomock:go_default_library",
