fix dispatcher port + cleaning isShimDispatcher

--- a/dispatcher/cmd/dispatcher/BUILD.bazel
+++ b/dispatcher/cmd/dispatcher/BUILD.bazel
@@ -18,6 +18,7 @@ go_library(
             "//private/app:go_default_library",
             "//private/app/launcher:go_default_library",
             "//private/service:go_default_library",
+            "//private/topology/underlay:go_default_library",
             "@com_github_go_chi_chi_v5//:go_default_library",
             "@com_github_go_chi_cors//:go_default_library",
             "@org_golang_x_sync//errgroup:go_default_library",
@@ -33,6 +34,7 @@ go_library(
             "//private/app:go_default_library",
             "//private/app/launcher:go_default_library",
             "//private/service:go_default_library",
+            "//private/topology/underlay:go_default_library",
             "@com_github_go_chi_chi_v5//:go_default_library",
             "@com_github_go_chi_cors//:go_default_library",
             "@org_golang_x_sync//errgroup:go_default_library",
@@ -48,6 +50,7 @@ go_library(
             "//private/app:go_default_library",
             "//private/app/launcher:go_default_library",
             "//private/service:go_default_library",
+            "//private/topology/underlay:go_default_library",
             "@com_github_go_chi_chi_v5//:go_default_library",
             "@com_github_go_chi_cors//:go_default_library",
             "@org_golang_x_sync//errgroup:go_default_library",
@@ -63,6 +66,7 @@ go_library(
             "//private/app:go_default_library",
             "//private/app/launcher:go_default_library",
             "//private/service:go_default_library",
+            "//private/topology/underlay:go_default_library",
             "@com_github_go_chi_chi_v5//:go_default_library",
             "@com_github_go_chi_cors//:go_default_library",
             "@org_golang_x_sync//errgroup:go_default_library",
