Move the fnv1a hash to its own file and function. Restore the random seed.

--- a/router/BUILD.bazel
+++ b/router/BUILD.bazel
@@ -5,6 +5,7 @@ go_library(
     srcs = [
         "connector.go",
         "dataplane.go",
+        "fnv1aCheap.go",
         "metrics.go",
         "svc.go",
     ],
