ci: fix build for openwrt package, enable setting version from env var
Fix handling of release version (e.g. "0.11.0") in openwrt package
build. Was only working for intermediate versions, like "0.10.0-32-asdlkjslka".

Allow overwriting the version used for the builds consistently.
Previously there was an envar GIT_VERSION that could do this partially.
Renamed to SCION_VERSION and supported now also fully for the package builds.
Setting this variable in buildkite pipelines should now allow, for
example, building release builds before explicitly tagging the release.

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -25,7 +25,7 @@ steps:
   - wait
   - label: "Package :debian: :openwrt:"
     command:
-      - version="$(tools/git-version)"
+      - version=${SCION_VERSION:-$(tools/git-version)}
       - make dist-deb BFLAGS="--file_name_version=${version}"
       - make dist-openwrt BFLAGS="--file_name_version=${version}"
       - cd installables;
