--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -24,16 +24,16 @@ steps:
     timeout_in_minutes: 10
   - wait
   - label: "Package :debian: :openwrt:"
-    command:
-      - version=${SCION_VERSION:-$(tools/git-version)}
-      - make dist-deb BFLAGS="--file_name_version=${version}"
-      - make dist-openwrt BFLAGS="--file_name_version=${version}"
-      - cd installables;
-      - tar -chaf scion-deb-amd64.tar.gz *_${version}_amd64.deb
-      - tar -chaf scion-deb-arm64.tar.gz *_${version}_arm64.deb
-      - tar -chaf scion-deb-i386.tar.gz *_${version}_i386.deb
-      - tar -chaf scion-deb-armel.tar.gz *_${version}_armel.deb
-      - tar -chaf scion-openwrt-x86_64.tar.gz *_${version}_x86_64.ipk
+    command: |
+      version=${SCION_VERSION:-$(tools/git-version)}
+      make dist-deb BFLAGS="--file_name_version=$${version}"
+      make dist-openwrt BFLAGS="--file_name_version=$${version}"
+      cd installables;
+      tar -chaf scion-deb-amd64.tar.gz *_$${version}_amd64.deb
+      tar -chaf scion-deb-arm64.tar.gz *_$${version}_arm64.deb
+      tar -chaf scion-deb-i386.tar.gz *_$${version}_i386.deb
+      tar -chaf scion-deb-armel.tar.gz *_$${version}_armel.deb
+      tar -chaf scion-openwrt-x86_64.tar.gz *_$${version}_x86_64.ipk
     artifact_paths:
       - "installables/scion-*.tar.gz"
     plugins:
