connectrpc: generate code with buf
Generate the additional code required for connectrpc with the buf
tool. Currently, there is no bazel ruleset available for buf. We work
around this by invoking the buf binary directly and commiting the
generated code in git. To deal with generation, we pin the
`protoc-gen-connect-go` version in the go.mod file. A small scaffolding
go binary is added to deal with setting up the environment correctly
for the buf tool. While this could be a shell script, this is more
readable and maintainable.

This PR is broken out of the
https://github.com/scionproto/scion/tree/connectrpc branch to make
incremental review easier.

TL;DR: Run `bazel run //tools/buf` to generate the connectrpc code.

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -1,5 +1,4 @@
-load("@bazel_skylib//rules:common_settings.bzl", "bool_flag")
-load("@bazel_skylib//rules:common_settings.bzl", "string_flag")
+load("@bazel_skylib//rules:common_settings.bzl", "bool_flag", "string_flag")
 load("@bazel_gazelle//:def.bzl", "gazelle")
 load("@rules_pkg//:pkg.bzl", "pkg_tar")
 load("@io_bazel_rules_go//go:def.bzl", "nogo")
@@ -130,9 +129,10 @@ gazelle(
 go_lint_config(
     name = "go_lint_config",
     exclude_filter = [
-        "mock_",
-        ".pb.go",
+        ".connect.go",
         ".gen.go",
+        ".pb.go",
+        "mock_",
     ],
     visibility = [
         "//visibility:public",
