fixup: jc codeowner for router

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -11,6 +11,7 @@
 # - Either Dominik (oncilla) or Lukas (lukedirtwalker) should be involved for
 #   changes that could impact the compatibility between this implementation and
 #   their proprietary system.
+# - Jean-Christophe (jiceatscion) would like to be involved for changes to the router
 antlr/** @oncilla @lukedirtwalker
 control/trust/** @oncilla
 gateway/dataplane/encoder.go @oncilla @lukedirtwalker
@@ -20,5 +21,6 @@ pkg/slayers/** @scionproto/scion-core-team
 pkg/snet/** @scionproto/scion-core-team
 private/trust/** @oncilla
 proto/** @oncilla @lukedirtwalker
+router/dataplane.go @jiceatscion
 scion-pki/** @oncilla
 tools/braccept/cases/** @scionproto/scion-core-team
