--- a/acceptance/router_benchmark/brload/BUILD.bazel
+++ b/acceptance/router_benchmark/brload/BUILD.bazel
@@ -3,7 +3,7 @@ load("//:scion.bzl", "scion_go_binary")
 
 go_library(
     name = "go_default_library",
-    srcs = ["main.go"],
+    srcs = ["main.go", "mmsg.go"],
     importpath = "github.com/scionproto/scion/acceptance/router_benchmark/brload",
     visibility = ["//visibility:private"],
     deps = [
@@ -17,6 +17,7 @@ go_library(
         "@com_github_google_gopacket//afpacket:go_default_library",
         "@com_github_google_gopacket//layers:go_default_library",
         "@com_github_spf13_cobra//:go_default_library",
+        "@org_golang_x_sys//unix:go_default_library",
     ],
 )
 
