--- a/acceptance/router_benchmark/brload/BUILD.bazel
+++ b/acceptance/router_benchmark/brload/BUILD.bazel
@@ -3,7 +3,10 @@ load("//:scion.bzl", "scion_go_binary")
 
 go_library(
     name = "go_default_library",
-    srcs = ["main.go", "mmsg.go"],
+    srcs = [
+        "main.go",
+        "mmsg.go",
+    ],
     importpath = "github.com/scionproto/scion/acceptance/router_benchmark/brload",
     visibility = ["//visibility:private"],
     deps = [
