testing: incremental improvements to the router benchmark tooling (#4518)
Summary of changes:
* The packet size is now configurable. CI uses a constant while the
benchmark command accepts an optional argument.
* The benchmark command sets the mtu to 9000 on the host side and
instructs the user to do the same on the router side. In the CI test
variant: an mtu of 9000 (not 8000) is used on both sides.
* The performance index formula gained a tentative value for the
NIC_CONSTANT constant.
* The benchmark's total number of packets (per testcase) is no longer
tunable. Instead, the duration is what is configurable. Both the CI test
and the benchmark command use 13 seconds per test case.
* The benchmark's output includes a bit more information: bit rate and
raw (not corrected for preemptions) packet rate.
* A useless and noisy error message was silenced in brload: that which
was output for every foreign packet received (turns out that some
Realtek hardware sends proprietary management traffic as Ethernet
frames).
* Improved the relevance of mmbm by deliberately misaligning buffers.
Also make sure to not use more buffers than can fit in L3 cache when
probing for L2 cache + TLB misses.
* Added zip as a dependency after finding it isn't part of Debian by
default.
* Added an option (via constant for now) to profile the router during
the CI test.

---------

Co-authored-by: Jean-Christophe Hugly <jice@erasmus.ethz.ch>

--- a/acceptance/router_benchmark/cases/BUILD.bazel
+++ b/acceptance/router_benchmark/cases/BUILD.bazel
@@ -4,6 +4,7 @@ go_library(
     name = "go_default_library",
     srcs = [
         "br_transit.go",
+        "helpers.go",
         "in.go",
         "in_transit.go",
         "out.go",
