snet: remove ancient revinfo struct, notify daemon async

--- a/control/BUILD.bazel
+++ b/control/BUILD.bazel
@@ -29,9 +29,11 @@ go_library(
         "//pkg/log:go_default_library",
         "//pkg/metrics:go_default_library",
         "//pkg/metrics/v2:go_default_library",
+        "//pkg/private/common:go_default_library",
         "//pkg/private/ctrl/path_mgmt:go_default_library",
         "//pkg/private/prom:go_default_library",
         "//pkg/private/serrors:go_default_library",
+        "//pkg/private/util:go_default_library",
         "//pkg/proto/hidden_segment:go_default_library",
         "//pkg/scrypto:go_default_library",
         "//pkg/scrypto/cppki:go_default_library",
