router: add test cases for malformed paths
Add test cases for checks added in #4556;
- invalid (non-peer) segments with a single hop field
- hop field pointer not pointing into current segment

--- a/tools/braccept/cases/BUILD.bazel
+++ b/tools/braccept/cases/BUILD.bazel
@@ -11,6 +11,7 @@ go_library(
         "doc.go",
         "internal_to_child.go",
         "jumbo.go",
+        "malformed_path.go",
         "onehop.go",
         "parent_to_child.go",
         "parent_to_internal.go",
